<resources>
    <string name="app_name">culpix</string>
    <string name="food_decorated_table">Food decorated table</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
</resources>