<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/culpix_intro_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/food_decorated_table"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/unsplash_brooke_lark_culpix_intro_photo" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toTopOf="@+id/facebook_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/facebook_btn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="6dp"
            android:text="@string/continue_with_facebook"
            android:textAllCaps="false"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toTopOf="@+id/login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/culpix_intro_img"
            app:layout_constraintTop_toBottomOf="@+id/signup_btn" />

        <Button
            android:id="@+id/login_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/facebook_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>